# wiset-inflearn-nemo

./: .gitignore  index.html  main.py  nemo_dashboard.html  nemo_eda_report.md  nemo_eda_slides.html  nemo_eda_slides.md  pyproject.toml
src/: generate_dashboard.py  nemo_eda.py  nemo_eda_v2.py  nemo_scraper.py
